--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm run preview\""
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/helmet": "^0.0.48",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^8.2.2"
   },
   "keywords": [
