--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/helmet": "^0.0.48",
+    "@types/react": "^19.1.13",
+    "@types/react-i18next": "^7.8.3",
     "@types/uuid": "^10.0.0",
     "concurrently": "^8.2.2"
   },
