--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/helmet": "^0.0.48",
     "@types/react": "^19.1.13",
     "@types/react-i18next": "^7.8.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
     "concurrently": "^8.2.2"
   },
